Container detail fixes (#395) (#421)
* Fix issues in https://issues.redhat.com/browse/AAH-250

- On the Read Me edit view, the edit field is very short. It only shows 3 or 4 lines and cannot be resized.

* On the Read Me edit view, the preview can become too wide and will squish the edit field even smaller.

* In the image tab, the tags for a given image have no order.

* On the Read Me edit view, the markdown textarea's label is not a proper label (accessibility issue)

* In the image tag edit dialog, if you try to add a tag that already exists on an image, you get an error saying "
This tag already exists on another image. Do you want to move it to this image?"** which is both incorrect and misleading.**

Error accours when user tries to add a tag that is already on the image. IF an user tries to add tag from another image the message stays as before.

* In the image tab, the tags column can become too large (especially when showing all tags) and shrinks the remaining columns in the table.

* Monkeypatch: Activity tab is cut off at 10 events without pagination, a way to load more, or any indication that this is not a complete list.

* Better fix for Activity tab is cut off at 10 events without pagination, a way to load more, or any indication that this is not a complete list.

* Use id instead of class

* Description in the form is textarea that can be resized

* Use aria-labelledby instead of aria-label

(cherry picked from commit d36791270a8bd28dd9e23318d2862d460acef914)

--- a/src/components/markdown-editor/markdown-editor.scss
+++ b/src/components/markdown-editor/markdown-editor.scss
@@ -22,10 +22,11 @@
   }
 
   .editor {
-    flex-shrink: 0;
+    min-width: 500px;
+    max-width: 500px;
   }
 }
-.resources-editor {
+#resources {
   height: 500px;
   resize: none;
 }
